--- a/angular-web-app/src/app/components/_layout/nav/nav.component.html
+++ b/angular-web-app/src/app/components/_layout/nav/nav.component.html
@@ -2,8 +2,8 @@
 <nav class="navbar navbar-expand-md fixed-top py-0" id="mainNav">
   <div class="container">
     <a class="navbar-brand" routerLink="/home">
-      <img src="/assets/img/favicon/favicon-96x96.png" alt="logo" class="navbar-brand-img">
-      <span class="ml-2">Spavento</span>
+      <img src="{{navContent.brandImage}}" alt="logo" class="navbar-brand-img">
+      <span class="ml-2">{{navContent.brandName}}</span>
     </a>
 
     <!-- Collapse button -->
@@ -18,28 +18,10 @@
 
     <div [ngbCollapse]="isMenuCollapsed" class="collapse navbar-collapse" id="navbarResponsive">
       <ul class="navbar-nav ml-auto my-2 my-lg-0">
-        <li class="nav-item">
+        <li *ngFor="let navLink of navContent.navLinks" class="nav-item">
           <a class="nav-link nav-link-fade-up" data-toggle="collapse" data-target="#navbarResponsive.show"
-            routerLink="/home" routerLinkActive="router-link-active" (click)="closeMenu()">
-            Home
-          </a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link nav-link-fade-up" data-toggle="collapse" data-target="#navbarResponsive.show"
-            routerLink="/portfolio" routerLinkActive="router-link-active" (click)="closeMenu()">
-            Portfolio
-          </a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link nav-link-fade-up" data-toggle="collapse" data-target="#navbarResponsive.show"
-            routerLink="/news" routerLinkActive="router-link-active" (click)="closeMenu()">
-            News
-          </a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link nav-link-fade-up" data-toggle="collapse" data-target="#navbarResponsive.show"
-            routerLink="/contact" routerLinkActive="router-link-active" (click)="closeMenu()">
-            Contact
+            routerLink="{{navLink.routerLink}}" routerLinkActive="router-link-active" (click)="closeMenu()">
+            {{navLink.label}}
           </a>
         </li>
       </ul>
