--- a/angular-web-app/src/app/components/contact-card/contact-card.component.html
+++ b/angular-web-app/src/app/components/contact-card/contact-card.component.html
@@ -7,10 +7,10 @@
           <form (ngSubmit)="onSubmit()" #contactForm="ngForm">
             <div class="form-group">
               <mat-form-field appearance="{{ appearance }}" color="accent" class="w-100">
-                <mat-label>Name</mat-label>
+                <mat-label>Naam</mat-label>
                 <input matInput type="text" [(ngModel)]="model.name" name="name" id="name" #name="ngModel" required />
                 <mat-error *ngIf="name.valid || name.pristine">
-                  Name is <strong>required</strong>
+                  Naam is <strong>verplicht</strong>
                 </mat-error>
               </mat-form-field>
             </div>
@@ -21,38 +21,38 @@
                 <input matInput type="email" placeholder="info@example.com" [(ngModel)]="model.email" name="email"
                   id="email" #email="ngModel" required />
                 <mat-error *ngIf="email.valid || email.pristine">
-                  Email is <strong>required</strong>
+                  Email is <strong>verplicht</strong>
                 </mat-error>
               </mat-form-field>
             </div>
 
             <div class="form-group">
               <mat-form-field appearance="{{ appearance }}" color="accent" class="w-100">
-                <mat-label>Subject</mat-label>
+                <mat-label>Onderwerp</mat-label>
                 <mat-select [(ngModel)]="model.subject" name="subject" id="subject" #subject="ngModel" required>
                   <mat-option *ngFor="let subject of subjects" [value]="subject">{{ subject }}</mat-option>
                 </mat-select>
                 <mat-error *ngIf="subject.valid || subject.pristine">
-                  Subject is <strong>required</strong>
+                  Onderwerp is <strong>verplicht</strong>
                 </mat-error>
               </mat-form-field>
             </div>
 
             <div class="form-group">
               <mat-form-field appearance="{{ appearance }}" color="accent" class="w-100">
-                <mat-label>Message</mat-label>
+                <mat-label>Bericht</mat-label>
                 <textarea matInput [(ngModel)]="model.text" name="text" id="text" #text="ngModel" required></textarea>
                 <mat-error *ngIf="text.valid || text.pristine">
-                  Message is <strong>required</strong>
+                  Bericht is <strong>verplicht</strong>
                 </mat-error>
               </mat-form-field>
             </div>
 
             <button mat-raised-button color="accent" type="submit" class="mr-3" [disabled]="!contactForm.form.valid">
-              Submit
+              Verstuur
             </button>
             <button mat-raised-button color="primary" type="button" (click)="resetForm(); contactForm.reset()">
-              Clear
+              Reset
             </button>
 
           </form>
@@ -60,9 +60,9 @@
 
         <!-- Submitted -->
         <div [hidden]="!submitted">
-          <p>Thanks for your message.</p>
+          <p>Bedankt voor je bericht.</p>
           <button mat-raised-button color="accent" type="button" (click)="submitted = false">
-            Edit
+            Bewerk
           </button>
         </div>
       </div>
