Added navigation management

--- a/angular-web-app/src/app/app.component.html
+++ b/angular-web-app/src/app/app.component.html
@@ -1,5 +1,5 @@
 <!-- NavBar -->
-<app-nav></app-nav>
+<app-nav [navContent]="navContent" [fixed]="true"></app-nav>
 
 <!-- Site content -->
 <div
@@ -12,4 +12,4 @@
 </div>
 
 <!-- Footer -->
-<app-footer></app-footer>
+<app-footer [footerContent]="footerContent"></app-footer>
