--- a/angular-web-app/src/app/components/_admin/dashboard/dashboard.component.html
+++ b/angular-web-app/src/app/components/_admin/dashboard/dashboard.component.html
@@ -1,1 +1,13 @@
-<p>dashboard works!</p>
+<div class="container pt-5">
+  <app-section-title 
+    [title]="'Dashboard'"
+    [subTitle]="'Admin'"
+    [text]="'Welkom bij Material Admin'">
+  </app-section-title>
+
+  <div class="row">
+    <div class="col-12">
+      <div style="height: 2000px"></div>
+    </div>
+  </div>
+</div>
