--- a/angular-web-app/src/app/components/_admin/page-home/page-home.component.html
+++ b/angular-web-app/src/app/components/_admin/page-home/page-home.component.html
@@ -1,1 +1,12 @@
-<p>page-home works!</p>
+<div class="container pt-5">
+  <app-section-title 
+    [title]="title"
+    [subTitle]="subTitle"
+    [text]="text">
+  </app-section-title>
+
+  <div class="row">
+    <div class="col-12">
+    </div>
+  </div>
+</div>
