--- a/angular-web-app/src/app/components/_admin/layout-navigation/layout-navigation.component.html
+++ b/angular-web-app/src/app/components/_admin/layout-navigation/layout-navigation.component.html
@@ -1,1 +1,54 @@
-<p>layout-navigation works!</p>
+<div class="container pt-5">
+  <app-section-title [title]="title" [subTitle]="subTitle" [text]="text">
+  </app-section-title>
+
+  <div class="row">
+    <div class="col-12">
+      <mat-card class="mat-elevation-z4">
+        <h4 class="title-underlined">Resultaat</h4>
+        <app-nav [navContent]="navContent" [fixed]="false" class="navbar-scrolled"></app-nav>
+      </mat-card>
+    </div>
+  </div>
+
+  <div class="row mt-3">
+    <div class="col-12">
+      <mat-card class="mat-elevation-z4">
+        <h4 class="title-underlined">Instellingen</h4>
+        <form (ngSubmit)="onSubmit()" #navigationForm="ngForm">
+
+          <div class="form-group">
+            <mat-form-field appearance="fill" class="form-field w-100">
+              <mat-label>Titel</mat-label>
+              <input matInput type="text" id="title" placeholder="Titel" name="title" [(ngModel)]="navContent.brandName"
+                #navTitle="ngModel" required>
+              <mat-hint [hidden]="navTitle.valid || navTitle.pristine">Titel is verplicht</mat-hint>
+            </mat-form-field>
+          </div>
+
+          <div class="form-group">
+            <mat-form-field appearance="fill" class="form-field w-100">
+              <mat-label>Logo</mat-label>
+              <input matInput type="text" id="logo" placeholder="Logo" name="logo" [(ngModel)]="navContent.brandImage"
+                #navLogo="ngModel" required>
+              <mat-hint [hidden]="navLogo.valid || navLogo.pristine">Logo is verplicht</mat-hint>
+            </mat-form-field>
+          </div>
+
+          <div class="form-group">
+            <mat-form-field appearance="fill" class="form-field w-100" *ngFor="let navlink of navContent.navlinks">
+              <mat-label>Navlink</mat-label>
+              <input matInput type="text" id="navLink" placeholder="Navlink" name="navLink" [(ngModel)]="navContent.navlinks.navlink"
+                #navLink="ngModel" required>
+              <mat-hint [hidden]="navLink.valid || navLink.pristine">navLink is verplicht</mat-hint>
+            </mat-form-field>
+          </div>
+
+          <button mat-flat-button color="accent" type="submit" [disabled]="!navigationForm.form.valid">Submit</button>
+          <button mat-flat-button color="primary" type="button" class="ml-3" (click)="reset()">Reset</button>
+        </form>
+      </mat-card>
+
+    </div>
+  </div>
+</div>
