--- a/angular-web-app/src/app/components/_admin/sidenav/sidenav.component.html
+++ b/angular-web-app/src/app/components/_admin/sidenav/sidenav.component.html
@@ -52,9 +52,9 @@
     <!-- Seperator -->
     <div class="separator flex-row flex-shrink-0 mb-2"></div>
     <div class="navlink-wrapper">
-      <a mat-list-item routerLink="/admin/settings" class="navlink txt-light">
-        <mat-icon class="material-icons-outlined">settings</mat-icon>
-        <span class="pl-2">Settings</span>
+      <a mat-list-item (click)="goToHome()" class="navlink txt-light">
+        <mat-icon class="material-icons-outlined">play_circle_outline</mat-icon>
+        <span class="pl-2">View site</span>
       </a>
     </div>
   </div>
